[tool]

[tool.poetry]
name = "libcnb"
version = "0.0.0"
homepage = "https://github.com/samj1912/python-libcnb"
description = " Cloud Native Buildpack API bindings for Python"
authors = ["Sambhav Kothari <sambhavs.email@gmail.com>"]
readme = "README.md"
license =  "Apache-2.0"
classifiers=[
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
include = [
    "LICENSE",
    "libcnb/py.typed"
]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = "^3.4.0"
pydantic = "^1.8.1"
toml = "^0.10.2"
packaging = "^20.9"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6"
pytest = "^6"
pytest-cov = "^2"
flake8 = "^3"
flake8-docstrings = "^1"
flake8-colors = "^0"

black = "^20.b"
mypy = "^0"
isort = "^5"
ipython = "^7"
autoflake = "^1"

[tool.black]
line-length=100

[tool.isort]
profile="black"
line_length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=libcnb --cov-branch --cov-report xml --cov-report term-missing -vv --color=yes"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
